# AsciiGL

./: .gitignore  CMakeLists.txt
examples/: cube.cpp
include/: AsciiGL.hpp
include/core/: renderer.hpp  screen_buffer.hpp  terminal.hpp
include/graphics/: graphics_types.hpp  rasterizer.hpp
include/math/: color.hpp  mat.hpp  vec.hpp
src/core/: renderer.cpp  screen_buffer.cpp  terminal.cpp
src/graphics/: rasterizer.cpp
src/platform/: terminal_linux.cpp  terminal_windows.cpp
